--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -35,13 +35,13 @@
 			            <td>{{course[2]}}</td>
 
                         <td>
-                            <a style="text-decoration: none;" href="{{ url_for('.edit',id_number = course[0]) }}">
+                            <a style="text-decoration: none;" href="couse/edit/{{course[0]}}">
                                 <button 
                                 class="btn btn-outline-primary rounded" 
                                 style="padding: 5px 10px 5px 10px;">Edit</button>
                                 </a>
-                            <button class="btn btn-danger btn-delete" data-course_id="{{ course[0]}}">Delete</button>
-                        </td>
+                         </td>
+                         <td><a href="course/delete/{{course[0]}}"><button onclick="return confirm('Are you sure to Delete data');" class="btn btn-danger">Delete </button> </a> </td>
 		            </tr>
 		        {% endfor %}
 	            </tbody>
@@ -49,10 +49,3 @@
         </div>
     </div>
 {%- endblock %}
-{% block scripts%}
-{{super()}}
-<script>
-    var url = "{{ url_for('.delete') }}";
-</script>
-<script src="{{ url_for('static',filename='js/course.js')}}"></script>
-{% endblock %}
