--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -13,10 +13,14 @@
         </nav>
         <div class="row">
             <div class="col  text-right">
-                <span class="float-right"><a href="{{ url_for('.add_course') }}" class="btn btn-primary">New </a></span>
+                <span class="float-right"><a href="{{ url_for('.add_course') }}" class="btn btn-primary">Add New Course </a></span>
             </div>
+            <a href="{{ url_for('.index') }}" class="btn btn-primary">View Students Table </a>
+       
+            <a href="{{ url_for('.college') }}" class="btn btn-primary">View Colleges Table </a></span>
 
         </div>
+        <input type="text" id="myInput" maxlength="30" onkeyup="myFunction()" placeholder="Search for Course by Course Code.." >
         <div class="row mt-2">
             <table class="table">
                 <thead>
@@ -35,7 +39,7 @@
 			            <td>{{course[2]}}</td>
 
                         <td>
-                            <a style="text-decoration: none;" href="couse/edit/{{course[0]}}">
+                            <a style="text-decoration: none;" href="course/edit/{{course[0]}}">
                                 <button 
                                 class="btn btn-outline-primary rounded" 
                                 style="padding: 5px 10px 5px 10px;">Edit</button>
