--- a/app/templates/course.html
+++ b/app/templates/course.html
@@ -20,7 +20,8 @@
             <a href="{{ url_for('.college') }}" class="btn btn-primary">View Colleges Table </a></span>
 
         </div>
-        <input type="text" id="myInput" maxlength="30" onkeyup="myFunction()" placeholder="Search for Course by Course Code.." >
+        <input type="text" id="myInput" maxlength="30" onkeyup="myFunction()" placeholder="Course Code.." >
+        <input type="text" id="myInput1" maxlength="30" onkeyup="myFunction1()" placeholder="Course Name.." >
         <div class="row mt-2">
             <table id="myTable">
                 
@@ -62,6 +63,27 @@
                   // Loop through all table rows, and hide those who don't match the search query
                   for (i = 0; i < tr.length; i++) {
                     td = tr[i].getElementsByTagName("td")[0];
+                    if (td) {
+                      txtValue = td.textContent || td.innerText;
+                      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                      } else {
+                        tr[i].style.display = "none";
+                      }
+                    }
+                  }
+                }
+                function myFunction1() {
+                  // Declare variables
+                  var input, filter, table, tr, td, i, txtValue;
+                  input = document.getElementById("myInput1");
+                  filter = input.value.toUpperCase();
+                  table = document.getElementById("myTable");
+                  tr = table.getElementsByTagName("tr");
+                
+                  // Loop through all table rows, and hide those who don't match the search query
+                  for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[1];
                     if (td) {
                       txtValue = td.textContent || td.innerText;
                       if (txtValue.toUpperCase().indexOf(filter) > -1) {
