Changes in the edit and add college functionality

--- a/app/templates/edit_college.html
+++ b/app/templates/edit_college.html
@@ -33,12 +33,12 @@
                      </div>
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-12 col-sm-6">
                         <div class="form-group">
                         <label>College Name</label>
                         {{ form.college_name(class_="form-control") }}
                      </div>
-                        </div>
+                  </div>
                         <div class="col-12">
                            {{ form.submit(class_="btn btn-primary" , style_="font-size: 1.5rem") }}
                         </div>
