--- a/app/templates/college.html
+++ b/app/templates/college.html
@@ -13,7 +13,7 @@
         </nav>
         <div class="row">
             <div class="col  text-right">
-                <span class="float-right"><a href="{{ url_for('.add_course') }}" class="btn btn-primary">Add New College </a></span>
+                <span class="float-right"><a href="{{ url_for('.add_college') }}" class="btn btn-primary">Add New College </a></span>
             </div>
             <a href="{{ url_for('.index') }}" class="btn btn-primary">View Students Table </a>
        
